--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.3.1",
     "leancloud-storage": "^3.11.1",
     "qiniu": "^7.2.1",
     "qiniu-js": "^2.5.4"
